--- a/index.html
+++ b/index.html
@@ -254,15 +254,15 @@
     const portrait = document.getElementById('char-portrait'), canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d'), pContainer = document.getElementById('p-container'), paintArea = document.getElementById('paint-area'), moodContainer = document.getElementById('mood-container');
 
     const memberQuotesData = {
-        'KAI': ['很上手嘛', '好心动 ✨', '想快点看到成品...'],
-        'RYOGA': ['喂喂', '很有个性嘛', '别分心呀'],
-        'TAKUYA': ['线条很有灵性', '色彩选得真好', '很有品味喔'],
-        'YUKI': ['喔喔！超有气势！', '你是天才吗？', '大成功！'],
-        'TAKASHI': ['慢慢画', '心意传达过来了', '我陪着你'],
-        'SHUYA': ['大胆画！', '超棒~', '加油喔~'],
-        'MASAHIRO': ['好细致啊...', '有点饿了', '真不错'], 
-        'ALOHA': ['Wow!', '太酷了！🤙', '很有 Feel！'],
-        'HARU': ['我最喜欢啦', '嘿嘿~', '看起来很好吃！']
+        'KAI': ['很上手嘛 ', '💕', '想快点看到成品...'],
+        'RYOGA': ['真的不尝下我做的？', '很有个性嘛', '👀'],
+        'TAKUYA': ['🐱 ', '🐾', '很有你的风格呢'],
+        'YUKI': ['💖', '你是天才吗？ ', '大成功！'],
+        'TAKASHI': ['慢慢画 ', '心意我收到了', '☀️'],
+        'SHUYA': ['大胆画！', '超棒~ ', '😜'],
+        'MASAHIRO': ['🤤', '有点饿了 ', '咕噜... '], 
+        'ALOHA': ['Wow! ', '大好き!', '🤙'],
+        'HARU': ['🍫', '嘿嘿~ ', '看起来很好吃！ ']
     };
 
     const quotePools = {};
